Example PARAGRAPH_STYLE in lynx.cfg

--- a/lynx.cfg
+++ b/lynx.cfg
@@ -3034,6 +3034,14 @@ COLOR:6:brightred:black
 #COLOR_STYLE: mild-colors.lss
 #COLOR_STYLE: opaque.lss
 
+.h2 PARAGRAPH_STYLE
+# Pre-format <P> or <DIV> class names feature
+# for <p class="xxx"> or <div class="xxx"> with CSS ".xxx{white-space:pre}".
+#    PARAGRAPH_STYLE:ppre <url> .<classname>[,.<classname>]*
+.ex 2
+#  PARAGRAPH_STYLE:ppre https://nitter.net .media-body,.quote-text
+#  PARAGRAPH_STYLE:ppre https://togetter.com .tweet
+
 .h2 NESTED_TABLES
 # This is an experimental feature for improving table layout.
 # It is enabled by default when the COLOR_STYLE configuration is used,
